; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_wm5110.c_wm5110_adsp2_irq.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_wm5110.c_wm5110_adsp2_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wm5110_priv = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32*, %struct.arizona* }
%struct.arizona = type { i32 }
%struct.arizona_voice_trigger_info = type { i32 }

@WM5110_NUM_ADSP = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@WM_ADSP_COMPR_VOICE_TRIGGER = common dso_local global i32 0, align 4
@ARIZONA_NOTIFY_VOICE_TRIGGER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Spurious compressed data IRQ\0A\00", align 1
@IRQ_NONE = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @wm5110_adsp2_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wm5110_adsp2_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.wm5110_priv*, align 8
  %7 = alloca %struct.arizona*, align 8
  %8 = alloca %struct.arizona_voice_trigger_info, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to %struct.wm5110_priv*
  store %struct.wm5110_priv* %13, %struct.wm5110_priv** %6, align 8
  %14 = load %struct.wm5110_priv*, %struct.wm5110_priv** %6, align 8
  %15 = getelementptr inbounds %struct.wm5110_priv, %struct.wm5110_priv* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load %struct.arizona*, %struct.arizona** %16, align 8
  store %struct.arizona* %17, %struct.arizona** %7, align 8
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %18

18:                                               ; preds = %49, %2
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* @WM5110_NUM_ADSP, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %52

22:                                               ; preds = %18
  %23 = load %struct.wm5110_priv*, %struct.wm5110_priv** %6, align 8
  %24 = getelementptr inbounds %struct.wm5110_priv, %struct.wm5110_priv* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = load i32, i32* %10, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = call i32 @wm_adsp_compr_handle_irq(i32* %29)
  store i32 %30, i32* %11, align 4
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* @ENODEV, align 4
  %33 = sub nsw i32 0, %32
  %34 = icmp ne i32 %31, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %22
  %36 = load i32, i32* %9, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %9, align 4
  br label %38

38:                                               ; preds = %35, %22
  %39 = load i32, i32* %11, align 4
  %40 = load i32, i32* @WM_ADSP_COMPR_VOICE_TRIGGER, align 4
  %41 = icmp eq i32 %39, %40
  br i1 %41, label %42, label %48

42:                                               ; preds = %38
  %43 = load i32, i32* %10, align 4
  %44 = getelementptr inbounds %struct.arizona_voice_trigger_info, %struct.arizona_voice_trigger_info* %8, i32 0, i32 0
  store i32 %43, i32* %44, align 4
  %45 = load %struct.arizona*, %struct.arizona** %7, align 8
  %46 = load i32, i32* @ARIZONA_NOTIFY_VOICE_TRIGGER, align 4
  %47 = call i32 @arizona_call_notifiers(%struct.arizona* %45, i32 %46, %struct.arizona_voice_trigger_info* %8)
  br label %48

48:                                               ; preds = %42, %38
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %10, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %10, align 4
  br label %18

52:                                               ; preds = %18
  %53 = load i32, i32* %9, align 4
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %61, label %55

55:                                               ; preds = %52
  %56 = load %struct.arizona*, %struct.arizona** %7, align 8
  %57 = getelementptr inbounds %struct.arizona, %struct.arizona* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @dev_err(i32 %58, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %60 = load i32, i32* @IRQ_NONE, align 4
  store i32 %60, i32* %3, align 4
  br label %63

61:                                               ; preds = %52
  %62 = load i32, i32* @IRQ_HANDLED, align 4
  store i32 %62, i32* %3, align 4
  br label %63

63:                                               ; preds = %61, %55
  %64 = load i32, i32* %3, align 4
  ret i32 %64
}

declare dso_local i32 @wm_adsp_compr_handle_irq(i32*) #1

declare dso_local i32 @arizona_call_notifiers(%struct.arizona*, i32, %struct.arizona_voice_trigger_info*) #1

declare dso_local i32 @dev_err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
